--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,36 @@ services:
       - 5432:5432
     volumes:
       - db:/var/lib/postgresql/data 
+  book-service:
+    build:
+      context: ./services/book
+      dockerfile: Dockerfile.book
+    ports:
+      - "50051:50051"
+    networks:
+      - microservices-network
+
+  user-service:
+    build:
+      context: ./services/user
+      dockerfile: Dockerfile.user
+    ports:
+      - "50052:50052"
+    networks:
+      - microservices-network
+  review-service:
+    build: 
+      context: ./services/review 
+      dockerfile: Dockerfile.review 
+    ports: 
+      - "50053:50053"
+    networks: 
+      - microservices-network
+networks:
+  microservices-network:
+    driver: bridge
+
+
 
 volumes:
   db:
