--- a/services/book/Dockerfile.book
+++ b/services/book/Dockerfile.book
@@ -1,6 +1,11 @@
-FROM golang:1.22-alpine
+FROM golang:1.23-alpine AS builder 
 WORKDIR /app 
-COPY . . 
-RUN go build -o book-service 
+COPY go.mod go.sum ./
+RUN go mod download 
+COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -o book-service
+FROM alpine:latest 
+WORKDIR /app 
+COPY --from=builder /app/book-service . 
 EXPOSE 50051
 CMD ["./book-service"]
