--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-
-version: "3.8"
-
 services:
   database:
     container_name: database
@@ -14,10 +11,11 @@ services:
       - 5432:5432
     volumes:
       - db:/var/lib/postgresql/data 
+
   book-service:
     build:
       context: ./services/book
-      dockerfile: Dockerfile.book
+      dockerfile: Dockerfile.book  # Ensure this file exists in ./services/book
     ports:
       - "50051:50051"
     networks:
@@ -26,24 +24,25 @@ services:
   user-service:
     build:
       context: ./services/user
-      dockerfile: Dockerfile.user
+      dockerfile: Dockerfile.user  # Ensure this file exists in ./services/user
     ports:
       - "50052:50052"
     networks:
       - microservices-network
+
   review-service:
-    build: 
-      context: ./services/review 
-      dockerfile: Dockerfile.review 
-    ports: 
+    build:
+      context: ./services/review
+      dockerfile: Dockerfile.review  # Ensure this file exists in ./services/review
+    ports:
       - "50053:50053"
-    networks: 
+    networks:
       - microservices-network
+
+
 networks:
   microservices-network:
     driver: bridge
-
-
 
 volumes:
   db:
