--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - 5432:5432
     volumes:
       - db:/var/lib/postgresql/data 
+    networks: 
+      - microservices-network
 
   book-service:
     build:
